# tribes-vengeance-master-server

./: Cargo.toml  Dockerfile  README.md  TribesVengeanceMasterServer.sln
TribesVengeanceMasterServer/: Encoder.cs  GameServerStorage.cs  HeartBeatAgent.cs  HeartBeatServer.cs  MasterServer.cs  MasterServerAgent.cs  Program.cs  TaskPool.cs  TribesVengeanceMasterServer.csproj  encrtypex_decoder.nix.c
benches/: encrtypex_decoder.rs
reference/: .gitignore  GamespyServerListsTests.sln  README.md
reference/Comms/: Class1.vb  Comms.vbproj
reference/Comms3/: Class1.vb  Comms3.vbproj
reference/Comms3/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
reference/TestClient/: Module1.vb  TestClient.vbproj
reference/TestClient/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
reference/TestServer/: Program.cs  TestServer.csproj  encrtypex_decoder.c
reference/TestServer/Properties/: AssemblyInfo.cs
rust-impl/: Cargo.toml  build.rs
rust-impl/src/: main.rs
src/: encrtypex_decoder.rs  main.rs
