[package]
name = "tribes-vengeance-master-server"
version = "0.1.0"
authors = ["Jan Kelin <jan@jkelin.com>"]
edition = "2018"

[lib]
name = "encrtypex_decoder"
path = "src/encrtypex_decoder.rs"

[[bin]]
name = "tribes-vengeance-master-server"
path = "src/main.rs"

[dependencies]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "encrtypex_decoder"
harness = false